...
            key: Key('nav_scan_tab'),
            icon: Icon(Icons.qr_code_scanner_outlined),
            selectedIcon: Icon(Icons.qr_code_scanner),
            label: 'Escanear',
          ),
          NavigationDestination(
            key: Key('nav_shops_tab'),
            icon: Icon(Icons.storefront_outlined),
            selectedIcon: Icon(Icons.storefront),
            label: 'Cafeterías',
          ),
          NavigationDestination(
            key: Key('nav_diary_tab'),
...
